create loginpage and registerpage

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -10945,3 +10945,13 @@ img.incart {
   margin: 20px auto;
 }
 
+.opacity {
+  opacity: 0;
+  transition: all 1s;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none !important;
+}
+
